--- a/fm-frontend/src/pages/NotificationPage/NotificationList/styles.module.scss
+++ b/fm-frontend/src/pages/NotificationPage/NotificationList/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  margin: 0;
+  margin-bottom: 20px;
 
   .notificationItem:hover {
     background-color: #f4fcff;
@@ -17,8 +17,9 @@
     margin: 0;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-    padding: 16px;
+    padding: 20px;
     cursor: pointer;
 
     .notificationContent {
@@ -30,10 +31,10 @@
       .avatar {
         display: inline;
         margin-right: 12px;
-
+        
         img {
-          width: 40px;
-          height: 40px;
+          width: 40px !important;
+          height: 40px !important;
           border-radius: 50%;
         }
       }
